# quant-research-platform

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
config/: datasets.yaml  features.yaml
data/mock_data/: funding_rates.csv  ohlcv_btcusdt_1s.csv  rfq_events.csv  trade_records.csv
docs/: 01-project-delivery-plan.md  02-user-stories.md  03-design-document.md  04-test-strategy.md  05-quant-infrastructure.md  06-user-guide.md
notebooks/: 01_platform_quickstart.ipynb  02_factor_research_backtest.ipynb  03_rfq_trade_analysis.ipynb  04_funding_rate_risk_monitor.ipynb
scripts/: generate_mock_data.py
src/adp/: __init__.py  api.py  cli.py  config.py  exceptions.py
src/adp/features/: __init__.py  definitions.py  feature_store.py  materializer.py  strategies.py
src/adp/ingestion/: __init__.py  athena.py  file.py  strategies.py
src/adp/metadata/: __init__.py  models.py  registry.py  schema.py
src/adp/processing/: dedup.py  normalizer.py  schema.py
src/adp/storage/: __init__.py  reader.py  snapshot.py  writer.py
tests/: conftest.py
tests/e2e/: test_full_pipeline.py  test_reproducibility.py  test_snapshot_isolation.py
tests/integration/: test_duckdb_queries.py  test_feature_pipeline.py  test_ingestion_pipeline.py  test_snapshot_pipeline.py
tests/unit/: test_config.py  test_dedup.py  test_feature_definitions.py  test_feature_strategies.py  test_ingestion.py  test_metadata.py  test_normalizer.py  test_schema.py  test_snapshot.py
