[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adp"
version = "0.1.0"
description = "Athena Data Platform - Local lakehouse + research factor platform"
requires-python = ">=3.11,<3.14"
dependencies = [
    "polars~=1.38",
    "duckdb~=1.4",
    "pydantic~=2.12",
    "typer~=0.24",
    "pyyaml~=6.0",
]

[project.optional-dependencies]
aws = [
    "awswrangler~=3.15",
]
dev = [
    "pytest~=8.3",
    "pytest-cov~=6.0",
    "moto~=5.0",
    "time-machine~=2.16",
    "ruff~=0.9",
    "mypy~=1.14",
]

[project.scripts]
adp = "adp.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/adp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (file I/O, SQLite)",
    "e2e: End-to-end tests (full pipeline)",
    "slow: Tests that take >5 seconds",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["B008"]  # Typer requires function calls in default args

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
